# f1tenth_labs

./: .gitignore
cartographer_config/: f110_2d.launch  f110_2d_viz.launch
lab1/: written_questions.md
lab1/anh_roslab/: CMakeLists.txt  package.xml
lab1/anh_roslab/launch/: lequanganh_lab1.launch
lab1/anh_roslab/msg/: scan_range.msg
lab1/anh_roslab/scripts/: lidar_processing.py
lab1/latex/: anh_lab1_solution.tex
lab1/quanganh001_lab1/: CMakeLists.txt  config.rviz  package.xml
lab1/quanganh001_lab1/launch/: quanganh001_lab1.launch
lab1/quanganh001_lab1/scripts/: lidar_processing.py
lab2/code/: CMakeLists.txt  package.xml
lab2/code/launch/: quanganh001_lab2.launch
lab2/code/scripts/: safety_node.py
lab3/code/: CMakeLists.txt  package.xml
lab3/code/launch/: quanganh001_lab3.launch
lab3/code/src/: wall_follow.py
lab4/code/: CMakeLists.txt  package.xml
lab4/code/launch/: quanganh001_lab4.launch
lab4/code/src/: reactive_gap_follow.py
lab6/code/: CMakeLists.txt  README.md  package.xml
lab6/code/launch/: quanganh001_lab6.launch
lab6/code/scripts/: pure_pursuit.py  visualize_waypoint.py
lab6/logs/: analyze_logs.ipynb  summary-wp-2021-10-09-04-31-06.csv  wp-2021-10-09-04-31-06.csv
lab7/code/: CMakeLists.txt  downsample_10.csv  downsample_5.csv  package.xml  rrt_params.yaml  waypoints_cleaned.csv
lab7/code/include/lab7/: geom_helpers.h  rrt.h
lab7/code/launch/: lab7.launch
lab7/code/node/: rrt_node.cpp
lab7/code/scripts/: rrt.py
lab7/code/src/: geom_helpers.cpp  rrt.cpp
race1/code/: CMakeLists.txt  package.xml
race1/code/launch/: quanganh001_race1.launch
race1/code/src/: race.py
waypoint_logger/scripts/: waypoint_logger.py
