<?xml version="1.0"?>
<package format="2">
  <name>quanganh001_lab1</name>
  <version>0.0.0</version>
  <description>The anh_roslab package for first f1tenth lab</description>

  <maintainer email="lequanganhok@gmail.com">Le Quang Anh</maintainer>

  <license>MIT</license>

  <author email="lequanganhok@gmail.com">Le Quang Anh</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>f1tenth_simulator</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <depend>sensor_msgs</depend>

</package>
